# ai-chat-app

./: .gitignore  Caddyfile  Jenkinsfile  README.md  docker-compose.prod.yml
ai-service/: .dockerignore  .env.example  .env.production.example  Dockerfile  README.md  launch.json  pyproject.toml
ai-service/app/: main.py
ai-service/app/agent/: agent_service.py
ai-service/app/agent/agents/: agent_executor.py  agent_prompt.py  rag_agent.py
ai-service/app/agent/graph/: agent_graph.py  agent_node.py  custom_tool_node.py  message_builder.py  state.py
ai-service/app/agent/mcp/: client.py  router.py  servers.py  tools.py
ai-service/app/agent/prompts/: agent_prompt.py
ai-service/app/agent/schemas/: tool_schema.py
ai-service/app/agent/services/: agent_stream_service.py
ai-service/app/agent/tools/: calculator_tool.py  rag_tool.py  time_tool.py  weather_tool.py
ai-service/app/agent/workflow/: rag_graph.py  rag_service.py  rag_state.py
ai-service/app/api/: chat.py  chunk_debug.py  health.py  knowledge.py  retrieval_debug.py  title.py
ai-service/app/auth/: __init__.py  bootstrap.py  config.py  dependencies.py  models.py  rate_limit.py  router.py  schemas.py  security.py  service.py
ai-service/app/core/: config.py  exception.py  logger.py
ai-service/app/knowledgedb/: ai.db  ai.sqbpro  db.py  models.py  schemas.py
ai-service/app/llm/: chains.py  memory.py  model.py  prompts.py
ai-service/app/llm/services/: chat_service.py  chunk_service.py  file_service.py  llm_service.py  (+2 more)
ai-service/app/mcp_servers/: demo_server.py  postgres_server.py  remote_http_server.py
ai-service/app/rag/: config.py
ai-service/app/schemas/: request.py
ai-service/app/scripts/: check_mcp_runtime.py  create_admin.py  test_mcp_client.py
ai-service/app/services/: llm_service.py  rag_service.py
ai-service/app/stream/: sse.py
ai-service/app/uploads/: 00281b84-fcd8-4a4d-b040-071f75e21d27.txt  476d007b-5470-4e5c-8543-b4ad2748fce4.docx
ai-service/app/utils/: chunk.py  cleanMetadata.py  message.py  text_splitter.py
ai-service/chroma_db/: chroma.sqlite3
ai-service/docs/: mcp_runtime.md
ai-service/mcp_workspace/: test.txt
ai-service/tests/: test_auth_api.py
(+125 files in other folders)
