[project]
name = "ai-service"
version = "0.1.0"
description = "AI Service"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "chromadb>=0.5.23",
    "fastapi>=0.135.1",
    "langchain==0.1.20",
    "langchain-chroma>=0.1.4",
    "langchain-huggingface>=0.0.3",
    "langchain-openai>=0.1.7",
    "langgraph>=0.0.51",
    "numexpr>=2.14.1",
    "onnxruntime<1.20",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.5.0",
    "sympy>=1.13.1",
    "torch<2.6",
    "uvicorn>=0.41.0",
]
