[project]
name = "ai-service"
version = "0.1.0"
description = "AI Service"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "bcrypt>=5.0.0",
    "chromadb>=0.5.23",
    "fastapi>=0.135.1",
    "langchain-chroma>=0.1.4",
    "langchain-huggingface>=0.0.3",
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-openai>=0.3,<0.4",
    "langgraph>=0.6,<0.7",
    "langsmith>=0.1.147",
    "numexpr>=2.14.1",
    "onnxruntime<1.20",
    "pip>=26.1.2",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.5.0",
    "sympy>=1.13.1",
    "torch<2.6",
    "uvicorn>=0.41.0",
    "psycopg[binary]>=3.3.4",
    "python-multipart>=0.0.32",
    "jieba>=0.42.1",
    "mcp>=1.9.2,<2.0",
    "langchain-mcp-adapters==0.1.9",
]
